# reservatorio-ipr

./: .gitignore  README.md  historico_calibracao.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: config.toml
src/reservatorio/: __init__.py  app.py  config.py  main.py
src/reservatorio/application/: __init__.py  diagnostico.py  montecarlo.py  optimization.py  services.py
src/reservatorio/domain/: __init__.py  calibration.py  distributions.py  ipr_models.py  models.py  skin.py  thermal_correction.py
src/reservatorio/infrastructure/: __init__.py  interface_entrada.py  repositories.py  visualizacao.py
