[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reservatorio-ipr"
version = "3.1.0"
description = "Simulador quantitativo IPR (History Matching, Monte Carlo, Sensibilidade)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "pint>=0.22",
    "scikit-learn>=1.0.0"
]